Remove published label from article view, show unpadded day in date

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -39,9 +39,9 @@ cs:
     - pátek
     - sobota
     formats:
-      default: "%d. %m. %Y"
-      long: "%d. %B %Y"
-      short: "%d %b"
+      default: "%-d. %-m. %Y"
+      long: "%-d. %B %Y"
+      short: "%-d %b"
     month_names:
     -
     - ledna
