Add speaker search body aggregation

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -237,3 +237,7 @@ cs:
           other: "Zobrazeny <b>všechny %{count}</b> %{entry_name}"
       more_pages:
         display_entries: "Zobrazeno %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> z <b>%{total}</b> celkem"
+  aggregations:
+    body_groups:
+      parliamentary: Strany a hnutí v Poslanecké sněmovně Parlamentu ČR
+      others: Další strany a hnutí
